--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,7 +58,7 @@
   }
 }
 
-#reader {
+/* #reader {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -69,4 +69,4 @@
 #reader__scan_region {
   width: auto !important;
   /* display:none */
-}
+} */
