--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,8 +65,8 @@
   justify-content: center;
   border: none !important;
 }
-
-#reader__scan_region {
+*/
+/* #reader__scan_region {
   width: auto !important;
-  /* display:none */
+  display:none
 } */
