--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,9 +64,9 @@
   align-items: center;
   justify-content: center;
   border: none !important;
-}
+}*/
 
-#reader__scan_region {
+/* #reader__scan_region {
   width: auto !important;
-  /* display:none */
-} */
+  display:none
+}  */
